# multichain-portfolio-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  spec.md
scripts/: daily-report.sh  diag_solana_capture.py  diag_solana_timeline.py  health-check.sh  weekly-report.sh
scripts/launchd/: com.example.portfolio-daily.plist  com.example.portfolio-health.plist  com.example.portfolio-weekly.plist
src/portfolio_tracker/: __init__.py  __main__.py  alerts.py  allocation.py  config.py  daily_report.py  models.py  report_formatter.py  service.py  storage.py
src/portfolio_tracker/adapters/: __init__.py  alchemy_nft.py  base.py  debank.py  helius_nft.py  jupiter.py  jupiter_jlp.py  solana_scraper.py
src/portfolio_tracker/adapters/chains/: __init__.py  evm.py  solana.py
src/portfolio_tracker/adapters/exchanges/: __init__.py  binance.py  bitget.py  bybit.py  okx.py
src/portfolio_tracker/adapters/pricing/: __init__.py  coingecko.py
src/portfolio_tracker/utils/: __init__.py  discord_webhook.py  keychain.py  rate_limiter.py
tests/: __init__.py  test_alchemy_nft.py  test_allocation.py  test_config.py  test_jupiter_jlp.py  test_models.py  test_nft_aggregation.py  test_nft_normalization.py  test_nft_valuation.py  test_report_formatter.py  test_solana_merge.py  test_solana_retry.py  test_solana_scraper.py  test_solana_wait.py
tests/fixtures/: jlp_info.json  jup_holdings_page.txt  jup_kamino_deposit_page.txt  jup_kamino_staked_page.txt  sample_portfolio.json  sample_portfolio_prev.json
