[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-tracker"
version = "0.1.0"
description = "Multi-source asset aggregation and net worth analysis tool"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
portfolio-tracker = "portfolio_tracker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_tracker"]
